RESOLVED FIXED188875
TypedArray's [[DefineOwnProperty]] is incorrect with partial descriptors
https://bugs.webkit.org/show_bug.cgi?id=188875
Summary TypedArray's [[DefineOwnProperty]] is incorrect with partial descriptors
isol2
Reported 2018-08-22 18:12:24 PDT
Hi everyone, there is an inconsistency when we try to seal a TypedArray object. version: 235121 OS: Ubuntu 16.04 x64 Steps to reproduce let ta = new Int32Array(10); Object.seal(ta); Actual results: TypeError: Attempting to store non-enumerable or non-writable property on a typed array at index: 0 Expected results: pass without failures V8, Chakra and SpiderMonkey works as expected. cinfuzz
Attachments
Patch (8.57 KB, patch)
2020-04-02 20:58 PDT, Alexey Shvayka
no flags
Ross Kirsling
Comment 1 2020-04-02 20:57:08 PDT
Alexey Shvayka
Comment 2 2020-04-02 20:58:13 PDT
Ross Kirsling
Comment 3 2020-04-02 21:00:51 PDT
(In reply to Ross Kirsling from comment #1) > Might be the same cause as this failure: > https://test262.report/browse/built-ins/TypedArrayConstructors/internals/ > DefineOwnProperty/conversion-operation.js Oh, heh, I didn't notice the date of the original comment... 🤦‍♂️
Ross Kirsling
Comment 4 2020-04-02 21:02:38 PDT
Comment on attachment 395342 [details] Patch r=me pending EWS
EWS
Comment 5 2020-04-02 22:57:23 PDT
Committed r259444: <https://trac.webkit.org/changeset/259444> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395342 [details].
Radar WebKit Bug Importer
Comment 6 2020-04-02 22:58:13 PDT
Note You need to log in before you can comment on or make changes to this bug.