TypedArray's [[DefineOwnProperty]] is incorrect with partial descriptors https://bugs.webkit.org/show_bug.cgi?id=188875

Reviewed by Ross Kirsling.

JSTests:

* stress/typedarray-configure-index.js:
* test262/expectations.yaml: Mark 10 test cases as passing.

Source/JavaScriptCore:

This change implements steps 3.b.iv-v of TypedArray's [[DefineOwnProperty]] method [1],
preventing type errors from being thrown if descriptor lacks [[Enumerable]] or [[Writable]]
field and aligning JSC with V8 and SpiderMonkey.

[1]: https://tc39.es/ecma262/#sec-integer-indexed-exotic-objects-defineownproperty-p-desc

* runtime/JSGenericTypedArrayViewInlines.h:
(JSC::JSGenericTypedArrayView<Adaptor>::defineOwnProperty):


Canonical link: https://commits.webkit.org/222865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259444 268f45cc-cd09-0410-ab3c-d52691b4dbfc